--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.48.5",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@types/jsonwebtoken": "^9.0.10",
 		"svelte": "^5.43.8",
 		"svelte-check": "^4.3.4",
 		"typescript": "^5.9.3",
@@ -23,6 +24,7 @@
 	"dependencies": {
 		"@googleapis/sheets": "^12.0.0",
 		"bcryptjs": "^3.0.3",
-		"googleapis": "^166.0.0"
+		"googleapis": "^166.0.0",
+		"jsonwebtoken": "^9.0.2"
 	}
 }
