fix:security in package

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,8 @@ GOOGLE_SERVICE_ACCOUNT_EMAIL=
 GOOGLE_PRIVATE_KEY="-
 # JWT Secret
 JWT_SECRET=your-jwt-secret-key-here
-USERS={"user1":"$2y$12$IpDZfWZnlK0tFBVSLXa8He5fQQ/mm8r3XanVhSyoIhYp0boTYCa/G","user2":"$2y$12$IpDZfWZnlK0tFBVSLXa8He5fQQ/mm8r3XanVhSyoIhYp0boTYCa/G","user3":"$2b$10$92IXUNpkjO0rOQ5byMi.Ye4oKoEa3Ro9llC/.og/at2.uheWG/igi","user4":"$2b$10$92IXUNpkjO0rOQ5byMi.Ye4oKoEa3Ro9llC/.og/at2.uheWG/igi"}
+# User credentials
+USER1_USERNAME=user1
+USER1_PASSWORD=hash password here
+USER2_USERNAME=user2
+USER2_PASSWORD=hash password here
