--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
     "@sveltejs/adapter-auto": "^7.0.0",
     "@sveltejs/kit": "^2.49.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "autoprefixer": "^10.4.22",
-    "svelte": "^5.45.4",
+    "@types/jsonwebtoken": "^9.0.10",
+    "autoprefixer": "^10.4.20",
+    "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^3.4.9",
     "typescript": "^5.9.3",
-    "vite": "^7.2.6"
+    "vite": "^7.2.2"
   },
   "dependencies": {
     "@googleapis/sheets": "^12.0.0",
     "bcryptjs": "^3.0.3",
-    "cookie": "^0.6.0",
+    "cookie": "^0.7.2",
     "googleapis": "^166.0.0",
     "jsonwebtoken": "^9.0.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "cookie": "^0.7.2"
+    }
   }
 }
